# BSUIR-OSTIS

./: README.md
ontology_model/answer_verification_ontology/AGENT/agent_misha/kpm/decisionMaking/: CMakeLists.txt  decisionMaking.cpp  decisionMaking.hpp
ontology_model/answer_verification_ontology/AGENT/agent_misha/kpm/decisionMaking/agents/: ADecisionMaking.cpp  ADecisionMaking.hpp  ADecisionMakingPreparation.cpp  ADecisionMakingPreparation.hpp  AMarkCorrectness.cpp  AMarkCorrectness.hpp  ANumberComparison.cpp  ANumberComparison.hpp  AReverseInference.cpp  AReverseInference.hpp  ATemplateGeneration.cpp  ATemplateGeneration.hpp
ontology_model/answer_verification_ontology/AGENT/agent_misha/kpm/decisionMaking/keynodes/: coreKeynodes.cpp  coreKeynodes.hpp  decisionMakingKeynodes.cpp  decisionMakingKeynodes.hpp
ontology_model/answer_verification_ontology/AGENT/agent_misha/kpm/decisionMaking/utils/: AgentUtils.cpp  CommonUtils.cpp  LogicRuleUtils.cpp  ProductUtils.cpp  ProductUtils.hpp
ontology_model/my_work/agents_c_plus/0.5.0/problem-solver/cxx/searchModule/: CMakeLists.txt  searchModule.cpp  searchModule.hpp
ontology_model/my_work/agents_c_plus/0.5.0/problem-solver/cxx/searchModule/myodes/: myodes.cpp  myodes.hpp
ontology_model/my_work/agents_c_plus/0.5.0/problem-solver/cxx/searchModule/specifications/agent_of_inclusion_search/: lib_component_ui_menu_inclusion_search.scs  ui_menu_inclusion_search.scsi
ontology_model/my_work/agents_c_plus/0.6.0/problem-solver/py/AnswerVerificationPyModule/: AnswerVerificationPyModule.cpp  AnswerVerificationService.hpp  CMakeLists.txt
ontology_model/my_work/agents_c_plus/0.6.0/problem-solver/py/AnswerVerificationPyModule/specifications/sc_agent_proc_fa_kn_similarity_calculation/: lib_component_ui_menu_fa_kn_similarity_calculation.scs  ui_menu_fa_kn_similarity_calculation.scsi
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/AnswerVerificationModule/: AnswerVerificationModule.cpp  AnswerVerificationModule.hpp  CMakeLists.txt
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/AnswerVerificationModule/agents/: FaEquivalenceJudgmentAgent.cpp  FaEquivalenceJudgmentAgent.hpp  FasimilarityAgent.cpp  FasimilarityAgent.hpp  FoStepsCheckAnswerAgent.cpp  FoStepsCheckAnswerAgent.hpp  LosimilarityAgent.cpp  LosimilarityAgent.hpp  QuestionGenerationAgent.cpp  QuestionGenerationAgent.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/AnswerVerificationModule/keynodes/: genKeynodes.cpp  genKeynodes.hpp  keynodes.cpp  keynodes.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/AnswerVerificationModule/specifications/sc_agent_proc_concept_log_eq_judgment_fa/: ui_menu_concept_log_eq_judgment_fa.scsi
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/AnswerVerificationModule/utils/: Display.cpp  Display.hpp  Faprocrss.cpp  Faprocrss.hpp  Foprocess.cpp  Foprocess.hpp  IteratorUtilsLocal.cpp  IteratorUtilsLocal.hpp  Loprocess.cpp  QuestionGenerationProcess.cpp  QuestionGenerationProcess.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/searchModule/: CMakeLists.txt  searchModule.cpp  searchModule.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/searchModule/agents/: AutomaticScoringExamTicketsAgent.cpp  AutomaticScoringExamTicketsAgent.hpp  GenQuestionsAndExamTicketsAgent.cpp  GenQuestionsAndExamTicketsAgent.hpp  InclusionSearchAgent.cpp  InclusionSearchAgent.hpp  WhatIsThatAgent.cpp  WhatIsThatAgent.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/searchModule/myodes/: myodes.cpp  myodes.hpp
ontology_model/my_work/agents_c_plus/ostis-example-app_0.6.0/problem-solver/cxx/searchModule/specifications/agent_of_what_is_that/: lib_component_ui_menu_what_is_that.scs  (+1 more)
ontology_model/my_work/agents_c_plus/problem-solver/cxx/factual_knowledge_similarity_calculation/: CMakeLists.txt
ontology_model/my_work/agents_c_plus/problem-solver/cxx/factual_knowledge_similarity_calculation/agents/: FasimilarityAgent.cpp  FasimilarityAgent.hpp
ontology_model/my_work/agents_c_plus/problem-solver/cxx/factual_knowledge_similarity_calculation/keynodes/: keynodes.cpp  keynodes.hpp
ontology_model/my_work/agents_c_plus/problem-solver/cxx/factual_knowledge_similarity_calculation/specifications/sc_agent_proc_fa_kn_similarity_calculation/: ui_menu_fa_kn_similarity_calculation.scsi
ontology_model/my_work/agents_c_plus/problem-solver/cxx/factual_knowledge_similarity_calculation/utils/: Faprocrss.cpp  Faprocrss.hpp
(+538 files in other folders)
